[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Image/Enemy/test-brisker-enemy.png" type="Texture" id=1]
[ext_resource path="res://GameObject/EnemyCore/Core/EnemyCore.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObject/EnemyCore/test-brisker-enemy.gd" type="Script" id=3]
[ext_resource path="res://GameObject/EnemyProjectile/EnemyBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameObject/EnemyTurret/EnemyTurret.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="test-brisker-enemy" instance=ExtResource( 2 )]
script = ExtResource( 3 )
base_hp = 18.0
base_atk = 17.0
base_def = 0.0
experience = 3

[node name="EnemyTurret" parent="." index="0" instance=ExtResource( 5 )]
enemy_obj = ExtResource( 4 )

[node name="BulletBehavior" parent="." index="1"]
active = true
speed = 10.0

[node name="Sprite" parent="." index="3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="Hitbox/Area2D" index="0"]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="." index="10"]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
